proyects html section and proyect css styles

--- a/Style.css
+++ b/Style.css
@@ -93,8 +93,8 @@ header {
 
 .skills-container {
   display: grid;
-  grid-template-columns: repeat(6, minmax(90px, 1fr));
-  gap: 1.5rem;
+  grid-template-columns: repeat(6, minmax(110px, 1fr));
+  gap: 2rem;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 10px;
   padding: 1.5rem;
@@ -117,4 +117,69 @@ header {
 
 .skills-container img:hover {
   transform: scale(1.1);
+}
+
+.h2proyects {
+  margin-top: 7rem;
+  text-align: center;
+  color: rgb(192, 230, 230);
+}
+
+.pages {
+  display: flex;
+  justify-content: center;
+  grid-template-rows: repeat(3, minmax(400px, 1fr));
+  padding: 3rem 1rem;
+  border-radius: 10px;
+}
+
+.page-container {
+  align-items: center;
+  text-align: center;
+}
+
+.page-container img {
+  width: 100%;
+  width: 350px;
+  height: 220px;
+  border-radius: 10px;
+  margin-bottom: 1rem;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.page-container img:hover {
+  transform: scale(1.02);
+}
+
+.title {
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: rgb(192, 230, 230);
+  margin: 0.5rem 0;
+}
+
+.description {
+  font-size: 0.9rem;
+  color: white;
+  margin-top: 0.5rem;
+  line-height: 1.5;
+  padding: 0 1rem;
+  width: 400px;
+}
+
+.tools-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 1rem;
+}
+
+.tools {
+  font-size: 0.9rem;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: white;
+  border-radius: 10px;
+  margin: 0.7rem;
+  padding: 0.7rem;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
 }
